--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
 <br>Phone : +60 179306447
 <br>Address : PT168, Kampung Padang Raja, 16400 Melor, Kelantan, MALAYSIA</p>
     </article>
-<p align=left> <video controls width="450" height="250">
-<source src="video/vr.mp4">
-</video>
+<p align=left> <iframe width="560" height="315" src="https://www.youtube.com/embed/BBJa32lCaaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <!-- ################################################################################################ -->
   </div>
 <!-- ################################################################################################ -->
